# visor_vin_scraper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
analysis/: analysis_constants.py  analysis_utils.py  cache.py  kbb.py  kbb_collector.py  level1.py  level2.py  models.py  normalization.py  outliers.py  reporting.py  scoring.py  utils.py
cache/: kbb.cache
output/: example_output.json  output.docs.md
output/level1/: Long Level 1 prompt.txt  Short Level 1 prompt.txt
presets/: presets.docs.md  presets.example.json  presets.json
prompts/: level1.py
scraper/: __main__.py  constants.py  scraper.py  utils.py
templates/: level1.css  level1.html  level2.css  level2.html  level3.css  level3.html  report.css
tests/: test_scraper.py  test_utils.py
utils/: cache.py  carfax_parser.py  common.py  dealcheck.py  download.py  fees.py  models.py
utils/constants/: __init__.py  analysis.py  scraper.py  utils.py
visor_scraper/: __main__.py  constants.py  download.py  helpers.py  scraper.py  test_script.py  utils.py
